--- a/tests/sensor-node/testcase.yaml
+++ b/tests/sensor-node/testcase.yaml
@@ -1,7 +1,7 @@
 tests:
   # section.subsection
   sample.testing.ztest:
-    build_only: true
+    # build_only: true
     platform_allow: native_posix
     integration_platforms:
       - native_posix
