polling for temperature is working
Co-authored-by: Petrus97 <Petrus97@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "request": "attach",
             "type": "cortex-debug",
             "servertype": "external", 
-            "gdbPath": "arm-none-eabi-gdb", 
+            "gdbPath": "gdb-multiarch", 
             "gdbTarget": "localhost:3333"
         }
     ]
