--- a/prj.conf
+++ b/prj.conf
@@ -1,3 +1,9 @@
 CONFIG_APPLICATION_DEFINED_SYSCALL=y
 CONFIG_BME680=y
 CONFIG_ADXL345=y
+CONFIG_GPIO=y
+CONFIG_I2C=y
+
+
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
