--- a/prj.conf
+++ b/prj.conf
@@ -3,7 +3,11 @@ CONFIG_BME680=y
 CONFIG_ADXL345=y
 CONFIG_GPIO=y
 CONFIG_I2C=y
+CONFIG_LOG=y
 
 
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+
+CONFIG_SMP=y
+CONFIG_SCHED_CPU_MASK=y
