--- a/prj.conf
+++ b/prj.conf
@@ -3,11 +3,13 @@ CONFIG_BME680=y
 CONFIG_ADXL345=y
 CONFIG_GPIO=y
 CONFIG_I2C=y
+CONFIG_I2C_TARGET=y
 CONFIG_LOG=y
-
-
+CONFIG_USE_SWITCH=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 
 CONFIG_SMP=y
 CONFIG_SCHED_CPU_MASK=y
+CONFIG_I2C_CALLBACK=y
+CONFIG_I2C_LOG_LEVEL_DBG=y
