--- a/prj.conf
+++ b/prj.conf
@@ -13,3 +13,10 @@ CONFIG_SMP=y
 CONFIG_SCHED_CPU_MASK=y
 CONFIG_I2C_CALLBACK=y
 CONFIG_I2C_LOG_LEVEL_DBG=y
+
+
+
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_LINE_CTRL=y
