--- a/prj.conf
+++ b/prj.conf
@@ -3,8 +3,9 @@ CONFIG_BME680=y
 CONFIG_ADXL345=y
 CONFIG_GPIO=y
 CONFIG_I2C=y
-CONFIG_LOG=y
 
+CONFIG_LOG=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
