--- a/prj.conf
+++ b/prj.conf
@@ -8,6 +8,8 @@ CONFIG_I2C_TARGET=y
 
 CONFIG_LOG=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_LOG_BACKEND_SHOW_COLOR=y
+CONFIG_LOG_INFO_COLOR_GREEN=y
 
 
 CONFIG_NEWLIB_LIBC=y
